# contextix

./: .contextignore  .gitignore  .pre-commit-config.yaml  MANIFESTO.md  README.md  contextix.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.qwen/: settings.json
.qwen/skills/markdown-sentence-extraction/: SKILL.md
.qwen/skills/regex-section-extraction/: SKILL.md
.qwen/skills/semantic-detector-pattern/: SKILL.md
contextix/: __init__.py
docs/: PRD.md  architecture.md  contributing.md  rfc-001-architecture-v2.md  rfc-001-review.md  roadmap.md  specification.md
docs/adr/: 0001-documentation-first-local-filesystem.md
research/: roadmap.md
src/: __init__.py
src/analyzer/: __init__.py  basic.py
src/analyzer/detectors/: __init__.py  architecture.py  constraint.py  decision.py  domain.py  goal.py  roadmap.py  shared.py  techstack.py
src/builder/: __init__.py  memory.py
src/cli/: main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  service.py
src/exporter/: __init__.py  filesystem.py
src/linker/: __init__.py  linker.py
src/models/: __init__.py  context.py
src/optimizer/: __init__.py  basic.py
src/parser/: __init__.py  repository.py
src/pipeline/: __init__.py  engine.py
src/plugins/: __init__.py  loader.py  manifest.py
src/providers/: __init__.py  base.py  registry.py
src/providers/analysis/: __init__.py
src/providers/export/: __init__.py
src/providers/sponsor/: __init__.py  base.py
src/storage/: __init__.py  filesystem.py
src/validator/: __init__.py  ces.py  validator.py
tests/: test_detectors.py  test_pipeline.py
