[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextix"
version = "0.1.0"
description = "AI-first project memory engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "mistune>=3.0.0", 
]

[project.scripts]
contextix = "contextix.cli.main:main"

[tool.setuptools]
package-dir = { "contextix" = "src" }
packages = [
    "contextix",
    "contextix.analyzer",
    "contextix.analyzer.detectors",
    "contextix.builder",
    "contextix.cli",
    "contextix.config",
    "contextix.core",
    "contextix.exporter",
    "contextix.linker",
    "contextix.models",
    "contextix.optimizer",
    "contextix.parser",
    "contextix.pipeline",
    "contextix.storage",
    "contextix.validator",
]

[tool.pytest.ini_options]
pythonpath = ["."]